--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,16 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <script async defer
+    	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwfdXF6g6QdE0TyXgPQABttylq6aLLe_w&callback=initMap">
+    </script>
+
   </head>
 
   <body>
+  	<div class="loader"></div>
+
     <%= yield %>
   </body>
 </html>
