--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,13 +27,14 @@ body {
     height: 120px;
     animation: spin 2s linear infinite;
     position: fixed;
-	z-index: 999;
+	z-index: 998;
 	overflow: show;
 	margin: auto;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
+	display: none;
 }
 
 @keyframes spin {
@@ -41,12 +42,46 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-.loader {
+.message {
+    border: 8px solid #6668a0;
+    border-top: 5px solid #3498db;
+    width: 70%;
+    max-height: 60px;
+    position: fixed;
+    z-index: 999;
+    overflow: show;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #b8eae0;
+    color: #190f0f;
+    font-size: 22px;
 	display: none;
 }
 
-#google-map-div {
-	height: 400px;
-	width: 100%;
+#wrapper {
+  display: flex;
 }
 
+#google-map-div {
+	flex: 0 0 60%;
+	height: 400px;
+	width: 70%;
+}
+
+#food-truck-div {
+	flex: 1;
+	height: 400px;
+	width: 30%;
+	overflow: auto;
+}
+
+.Push-Cart {
+	background: #00e64d;
+}
+
+.Truck {
+	background: #fd7567;
+}
